--- a/API/API-Introduction.xaml
+++ b/API/API-Introduction.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="621,2107" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:njl="clr-namespace:Newtonsoft.Json.Linq;assembly=Newtonsoft.Json" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="877,2275" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:njl="clr-namespace:Newtonsoft.Json.Linq;assembly=Newtonsoft.Json" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="38">
       <x:String>System.Activities</x:String>
@@ -71,23 +71,18 @@
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
       <AssemblyReference>NPOI</AssemblyReference>
       <AssemblyReference>Newtonsoft.Json</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
       <AssemblyReference>UiPath.Excel.Activities.Design</AssemblyReference>
       <AssemblyReference>UiPath.Excel</AssemblyReference>
       <AssemblyReference>UiPath.Excel.Activities</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap:VirtualizedContainerService.HintSize="631,2042" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap:VirtualizedContainerService.HintSize="887,2210" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="jsonOutput" />
       <Variable x:TypeArguments="njl:JObject" Name="strJsonOutput" />
       <Variable x:TypeArguments="x:String" Name="strCity" />
       <Variable x:TypeArguments="x:String" Default="1f58f8773350f72e6176560333aca124" Name="strAppid" />
-      <Variable x:TypeArguments="x:String" Name="strLang">
-        <Variable.Default>
-          <Literal x:TypeArguments="x:String">en</Literal>
-        </Variable.Default>
-      </Variable>
+      <Variable x:TypeArguments="x:String" Default="en" Name="strLang" />
       <Variable x:TypeArguments="x:String" Default="metric" Name="strUnit" />
       <Variable x:TypeArguments="njl:JObject" Name="jobjectPayload" />
       <Variable x:TypeArguments="x:String" Name="strPayload" />
@@ -98,7 +93,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Sequence DisplayName="Sequence - Get city name" sap:VirtualizedContainerService.HintSize="589,716" sap2010:WorkflowViewState.IdRef="Sequence_4">
+    <Sequence sap2010:Annotation.AnnotationText="&#xD;&#xA;*** Important:- Before run check api key is valid&#xD;&#xA;" DisplayName="Sequence - Get city name" sap:VirtualizedContainerService.HintSize="845,848" sap2010:WorkflowViewState.IdRef="Sequence_4">
       <Sequence.Variables>
         <Variable x:TypeArguments="sd:DataTable" Name="dtCities" />
         <Variable x:TypeArguments="s:String[]" Name="arrCities" />
@@ -106,10 +101,11 @@
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+          <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:ReadRange AddHeaders="True" DataTable="[dtCities]" DisplayName="Read Range" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="ReadRange_1" Range="B1:B31" SheetName="Sheet1" WorkbookPath="resources\worldcities.xlsx" />
-      <Assign sap2010:Annotation.AnnotationText="&#xD;&#xA;Linq query to select only city column from the data table and convert to array  (arrCities) and which later used as city selection in the input dialog activity&#xD;&#xA;" sap:VirtualizedContainerService.HintSize="334,166" sap2010:WorkflowViewState.IdRef="Assign_3">
+      <ui:ReadRange AddHeaders="True" DataTable="[dtCities]" DisplayName="Read Range" sap:VirtualizedContainerService.HintSize="338,97" sap2010:WorkflowViewState.IdRef="ReadRange_1" Range="B1:B31" SheetName="Sheet1" WorkbookPath="resources\worldcities.xlsx" />
+      <Assign sap2010:Annotation.AnnotationText="&#xA;Linq query to select only city column from the data table and convert to array  (arrCities) and which later used as city selection in the input dialog activity&#xA;" sap:VirtualizedContainerService.HintSize="338,176" sap2010:WorkflowViewState.IdRef="Assign_3">
         <Assign.To>
           <OutArgument x:TypeArguments="s:String[]">[arrCities]</OutArgument>
         </Assign.To>
@@ -127,13 +123,13 @@ Select result
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </Assign>
-      <ui:InputDialog OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="334,291" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="City Name" Options="[arrCities]" Title="Select City">
+      <ui:InputDialog OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="338,301" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="City Name" Options="[arrCities]" Title="Select City">
         <ui:InputDialog.Result>
           <OutArgument x:TypeArguments="x:String">[strCity]</OutArgument>
         </ui:InputDialog.Result>
       </ui:InputDialog>
     </Sequence>
-    <ui:HttpClient Body="{x:Null}" ClientCertificate="{x:Null}" ClientCertificatePassword="{x:Null}" ConsumerKey="{x:Null}" ConsumerSecret="{x:Null}" ContinueOnError="{x:Null}" FileAttachments="{x:Null}" OAuth1Token="{x:Null}" OAuth1TokenSecret="{x:Null}" OAuth2Token="{x:Null}" Password="{x:Null}" ResourcePath="{x:Null}" ResponseAttachment="{x:Null}" ResponseHeaders="{x:Null}" SecureClientCertificatePassword="{x:Null}" SecurePassword="{x:Null}" Username="{x:Null}" AcceptFormat="ANY" sap2010:Annotation.AnnotationText="&#xD;&#xA;&#xD;&#xA;*** https://api.openweathermap.org/data/2.5/weather?q={city name}&amp;appid={API key} ***&#xD;&#xA;&#xD;&#xA;&quot;https://api.openweathermap.org/data/2.5/weather?q=&quot;+strCity+&quot;&amp;lang=&quot;+strLang+&quot;&amp;units=&quot;+strUnit+&quot;&amp;appid=&quot;+strAppid+&quot;&quot;&#xD;&#xA;&#xD;&#xA;*** Important ***&#xD;&#xA;&#xD;&#xA;Here we dont setup api in configuration window. Instead we entre api details in properties-input-request URL and output get from output-Response content&#xD;&#xA;&#xD;&#xA;" AuthenticationType="None" BodyFormat="application/xml" DisplayName="HTTP Request" EnableSSLVerification="True" EndPoint="[&quot;https://api.openweathermap.org/data/2.5/weather?q=&quot;+strCity+&quot;&amp;lang=&quot;+strLang+&quot;&amp;units=&quot;+strUnit+&quot;&amp;appid=&quot;+strAppid+&quot;&quot;]" sap:VirtualizedContainerService.HintSize="589,441" sap2010:WorkflowViewState.IdRef="HttpClient_1" Method="GET" Result="[jsonOutput]" StatusCode="[intRespStatus]" TimeoutMS="6000">
+    <ui:HttpClient Body="{x:Null}" ClientCertificate="{x:Null}" ClientCertificatePassword="{x:Null}" ConsumerKey="{x:Null}" ConsumerSecret="{x:Null}" ContinueOnError="{x:Null}" FileAttachments="{x:Null}" OAuth1Token="{x:Null}" OAuth1TokenSecret="{x:Null}" OAuth2Token="{x:Null}" Password="{x:Null}" ResourcePath="{x:Null}" ResponseAttachment="{x:Null}" ResponseHeaders="{x:Null}" SecureClientCertificatePassword="{x:Null}" SecurePassword="{x:Null}" Username="{x:Null}" AcceptFormat="ANY" sap2010:Annotation.AnnotationText="&#xA;&#xA;*** https://api.openweathermap.org/data/2.5/weather?q={city name}&amp;appid={API key} ***&#xA;&#xA;&quot;https://api.openweathermap.org/data/2.5/weather?q=&quot;+strCity+&quot;&amp;lang=&quot;+strLang+&quot;&amp;units=&quot;+strUnit+&quot;&amp;appid=&quot;+strAppid+&quot;&quot;&#xA;&#xA;*** Important ***&#xA;&#xA;Here we dont setup api in configuration window. Instead we entre api details in properties-input-request URL and output get from output-Response content&#xA;&#xA;" AuthenticationType="None" BodyFormat="application/xml" DisplayName="HTTP Request" EnableSSLVerification="True" EndPoint="[&quot;https://api.openweathermap.org/data/2.5/weather?q=&quot;+strCity+&quot;&amp;lang=&quot;+strLang+&quot;&amp;units=&quot;+strUnit+&quot;&amp;appid=&quot;+strAppid+&quot;&quot;]" sap:VirtualizedContainerService.HintSize="845,451" sap2010:WorkflowViewState.IdRef="HttpClient_1" Method="GET" Result="[jsonOutput]" StatusCode="[intRespStatus]" TimeoutMS="6000">
       <ui:HttpClient.Attachments>
         <scg:Dictionary x:TypeArguments="x:String, InArgument(x:String)" />
       </ui:HttpClient.Attachments>
@@ -155,29 +151,29 @@ Select result
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:HttpClient>
-    <ui:DeserializeJson x:TypeArguments="njl:JObject" DisplayName="Deserialize JSON" sap:VirtualizedContainerService.HintSize="589,59" sap2010:WorkflowViewState.IdRef="DeserializeJson`1_1" JsonObject="[strJsonOutput]" JsonString="[jsonOutput]" />
-    <If Condition="[intRespStatus = 200]" sap:VirtualizedContainerService.HintSize="589,614" sap2010:WorkflowViewState.IdRef="If_1">
+    <ui:DeserializeJson x:TypeArguments="njl:JObject" DisplayName="Deserialize JSON" sap:VirtualizedContainerService.HintSize="845,69" sap2010:WorkflowViewState.IdRef="DeserializeJson`1_1" JsonObject="[strJsonOutput]" JsonString="[jsonOutput]" />
+    <If Condition="[intRespStatus = 200]" sap:VirtualizedContainerService.HintSize="845,632" sap2010:WorkflowViewState.IdRef="If_1">
       <If.Then>
-        <Sequence sap:VirtualizedContainerService.HintSize="272,456" sap2010:WorkflowViewState.IdRef="Sequence_5">
+        <Sequence sap:VirtualizedContainerService.HintSize="400,464" sap2010:WorkflowViewState.IdRef="Sequence_5">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="230,61" sap2010:WorkflowViewState.IdRef="WriteLine_4" Text="[&quot;Output 1&quot;+Environment.NewLine+&quot;Full json output from weather api is&quot;+Environment.NewLine+strJsonOutput.ToString]" />
+          <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="358,71" sap2010:WorkflowViewState.IdRef="WriteLine_4" Text="[&quot;Output 1&quot;+Environment.NewLine+&quot;Full json output from weather api is&quot;+Environment.NewLine+strJsonOutput.ToString]" />
           <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="230,61" sap2010:WorkflowViewState.IdRef="WriteLine_3" Text="[&quot;Output 2&quot;+Environment.NewLine+strJsonOutput(&quot;name&quot;).ToString+&quot; &quot;+strJsonOutput(&quot;weather&quot;).ToString]" />
           <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="230,61" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[&quot;Output 3&quot;+Environment.NewLine+strJsonOutput(&quot;main&quot;).ToString]" />
           <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="230,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Output 4&quot;+Environment.NewLine+strJsonOutput(&quot;name&quot;).ToString+&quot; has &quot;+ strJsonOutput(&quot;weather&quot;)(0)(&quot;description&quot;).ToString+&quot;, temperature is &quot;+strJsonOutput(&quot;main&quot;)(&quot;temp&quot;).ToString+&quot; Centigrade&quot;]" />
         </Sequence>
       </If.Then>
       <If.Else>
-        <Sequence sap:VirtualizedContainerService.HintSize="272,153" sap2010:WorkflowViewState.IdRef="Sequence_6">
+        <Sequence sap:VirtualizedContainerService.HintSize="400,161" sap2010:WorkflowViewState.IdRef="Sequence_6">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="230,61" sap2010:WorkflowViewState.IdRef="WriteLine_5" Text="[&quot;Response Status :-&quot;+intRespStatus.ToString]" />
+          <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="358,71" sap2010:WorkflowViewState.IdRef="WriteLine_5" Text="[&quot;Response Status :-&quot;+intRespStatus.ToString]" />
         </Sequence>
       </If.Else>
     </If>
